tests/script_errors/lexer_invalid_int_invalid_char/error.txt
Error: 
    1 | 12345_
      |      ^ An unexpected character '_' was found